--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (gdee "main.cpp" "UI/ui.cpp" "UI/ui.h" "UI/CustomImGui.cpp" "UI/CustomImGui.h")
+add_executable (gdee "main.cpp" "UI/ui.cpp" "UI/ui.h" "UI/CustomImGui.cpp" "UI/CustomImGui.h" "Python/python.cpp" "Python/python.h" "UI/UIManager.cpp" "UI/UIManager.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET gdee PROPERTY CXX_STANDARD 20)
