Add AddonManager class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,12 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (gdee "main.cpp" "UI/ui.cpp" "UI/ui.h" "UI/CustomImGui.cpp" "UI/CustomImGui.h" "Python/python.cpp" "Python/python.h" "UI/UIManager.cpp" "UI/UIManager.h")
+# TODO: separate build!
+add_executable (gdee 
+	"main.cpp" 
+	"UI/ui.cpp" "UI/ui.h" "UI/CustomImGui.cpp" "UI/CustomImGui.h" 
+	"Python/AddonManager.cpp" "Python/AddonManager.h"
+	"UI/UIManager.cpp" "UI/UIManager.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET gdee PROPERTY CXX_STANDARD 20)
@@ -21,3 +26,6 @@ target_link_libraries(gdee PRIVATE glfw)
 
 find_package(imgui CONFIG REQUIRED)
 target_link_libraries(gdee PRIVATE imgui::imgui)
+
+find_package(Python3 COMPONENTS Development REQUIRED)
+target_link_libraries(gdee PRIVATE Python3::Python)
